--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="./sortNumber.js" defer></script>
     <script src="./apiVoz.js" defer></script>
+    <script src="./validacao.js" defer></script>
+    
+
     <title>Número Secreto</title>
 </head>
 <body>
